fix spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,4 +14,5 @@ header h1:before {
   width: 32px;
   height: 32px;
   content:"";
+  margin-right: 0.5rem;
 }
